footer added works part fixed

--- a/src/index.css
+++ b/src/index.css
@@ -22,8 +22,8 @@
     height: 250px;
 }
 
-.content-div:hover {
+/* .content-div:hover {
     background-image: linear-gradient(to right,
-            rgba(112, 157, 255, 0.8),
-            hsla(242, 74%, 61%, 0.8)) !important;
-}
+            rgba(255, 106, 178, 0.478),
+            hsla(242, 94%, 80%, 0.8)) !important;
+} */
