--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -1,10 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Bungee+Spice&family=Concert+One&family=Do+Hyeon&family=Great+Vibes&family=Josefin+Sans&family=Kanit:wght@300;800&family=Lobster&family=Luckiest+Guy&family=Mate+SC&family=Oswald&family=Outfit:wght@300&family=Pacifico&family=Poppins:wght@400;500&family=Roboto+Condensed:wght@300;400&family=Secular+One&family=Yeseva+One&display=swap');
 
-
-.project-title {
-    font-family: 'Mate SC', serif;
-}
-
-.app-type {
+.intro {
     font-family: 'Do Hyeon', sans-serif;
 }
